fix insert order,booking

--- a/MAIN/QuanLy.resx
+++ b/MAIN/QuanLy.resx
@@ -323,6 +323,16 @@
         AAAAAAAAAAAAAAAAAAAAuDRucQABTOc/PQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="HoaDon.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIcAAABFCAYAAABgx/W1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADPSURBVHhe7dKxCcNAEABBlfadSflZNcsgRw/eDiYY2AL2
+        OGfWOfcFu1nHG5/7gc3clzn4zxwkc5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwkc5DM
+        QTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwk
+        c5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRwkc5DMQTIHyRyk3xyz3kFgM+sLRM120SGt
+        /CoAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="income_btn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIcAAABFCAYAAABgx/W1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
